--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<p><%= link_to "Home", root_path %>&nbsp;|&nbsp;<%= link_to "Keywords", keywords_path %>&nbsp;|&nbsp;<%= link_to "Stocks", stocks_path %>&nbsp;|&nbsp;<%= link_to "Streams", streams_path %></p>
+<p><%= link_to "Home", root_path %>&nbsp;|&nbsp;<%= link_to "Keywords", keywords_path %>&nbsp;|&nbsp;<%= link_to "Stocks", stocks_path %>&nbsp;|&nbsp;<%= link_to "Streams", streams_path %>&nbsp;|&nbsp;<%= link_to "Tweets", tweets_path %></p>
 
 <%= yield %>
 
