--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -1,23 +1,23 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Text:</b>
-  <%= @tweet.text %>
-</p>
-
-<p>
   <b>Date:</b>
   <%= @tweet.date %>
 </p>
 
 <p>
-  <b>Retweet count:</b>
-  <%= @tweet.retweet_count %>
+  <b>Stream:</b>
+  <%= @tweet.stream_id %>
 </p>
 
 <p>
-  <b>Stream:</b>
-  <%= @tweet.stream_id %>
+  <b>Mood positive:</b>
+  <%= @tweet.mood_positive %>
+</p>
+
+<p>
+  <b>Mood negative:</b>
+  <%= @tweet.mood_negative %>
 </p>
 
 
