--- a/app/views/streams/show.html.erb
+++ b/app/views/streams/show.html.erb
@@ -10,6 +10,26 @@
   <%= @stream.stock_id %>
 </p>
 
+<p>
+  <b>Consumer Key:</b>
+  <%= @stream.consumer_key %>
+</p>
+
+<p>
+  <b>Consumer Secret:</b>
+  <%= @stream.consumer_secret %>
+</p>
+
+<p>
+  <b>Oauth Token:</b>
+  <%= @stream.oauth_token %>
+</p>
+
+<p>
+  <b>Oauth Token Secret:</b>
+  <%= @stream.oauth_token_secret %>
+</p>
+
 
 <%= link_to 'Edit', edit_stream_path(@stream) %> |
 <%= link_to 'Back', streams_path %>
