--- a/app/views/keywords/index.html.erb
+++ b/app/views/keywords/index.html.erb
@@ -1,6 +1,8 @@
-<h1>Listing keywords</h1>
+<h1>Listing <%= @keywords.count %> keywords</h1>
 
-<table>
+<p><%= link_to 'New Keyword', new_keyword_path %></p>
+
+<table class="table table-striped table-condensed">
   <tr>
     <th>Name</th>
     <th>Stream</th>
@@ -19,7 +21,3 @@
   </tr>
 <% end %>
 </table>
-
-<br />
-
-<%= link_to 'New Keyword', new_keyword_path %>
