Added chart library, worked on UI, bugfix in streaming

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,16 @@
 <div class="center hero-unit">
   <h1>TwitterStockMood</h1>
 </div>
+
+<h2>Moods</h2>
+<div id="graphdiv"></div>
+<script type="text/javascript">
+  g = new Dygraph(
+
+    // containing div
+    document.getElementById("graphdiv"),
+
+    // CSV or path to a CSV file.
+
+  );
+</script>
