--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -27,6 +27,10 @@
     <%= f.label :mood_negative %><br />
     <%= f.number_field :mood_negative %>
   </div>
+  <div class="field">
+    <%= f.label :tweet_count %><br />
+    <%= f.number_field :tweet_count %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
