--- a/app/views/keywords/index.html.erb
+++ b/app/views/keywords/index.html.erb
@@ -14,7 +14,7 @@
 <% @keywords.each do |keyword| %>
   <tr>
     <td><%= keyword.name %></td>
-    <td><%= keyword.stream_id %></td>
+    <td><%= keyword.stream.name unless keyword.stream.nil? %></td>
     <td><%= link_to 'Show', keyword %></td>
     <td><%= link_to 'Edit', edit_keyword_path(keyword) %></td>
     <td><%= link_to 'Destroy', keyword, method: :delete, data: { confirm: 'Are you sure?' } %></td>
