--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -20,6 +20,11 @@
   <%= @tweet.mood_negative %>
 </p>
 
+<p>
+  <b>Tweet count:</b>
+  <%= @tweet.tweet_count %>
+</p>
+
 
 <%= link_to 'Edit', edit_tweet_path(@tweet) %> |
 <%= link_to 'Back', tweets_path %>
