--- a/app/views/streams/index.html.erb
+++ b/app/views/streams/index.html.erb
@@ -4,9 +4,11 @@
 
 <table class="table table-striped table-condensed">
   <tr>
+    <th>#</th>
     <th>Name</th>
     <th>Stock</th>
     <th>Oauth Data</th>
+    <th>Last Tweet</th>
     <th></th>
     <th></th>
     <th></th>
@@ -14,6 +16,7 @@
 
 <% @streams.each do |stream| %>
   <tr>
+    <td><%= stream.id %></td>
     <td><%= stream.name %></td>
     <td><%= stream.stock.name unless stream.stock.nil? %></td>
     <td>
@@ -22,9 +25,12 @@
       <b>Oauth Token:</b> <%= stream.oauth_token %><br />
       <b>Oauth Token Secret:</b> <%= stream.oauth_token_secret %>
     </td>
+    <td><%= stream.tweets.last.updated_at %>&nbsp;<%= '<i class="icon-exclamation-sign"></i>'.html_safe if Time.now.to_i - stream.tweets.last.updated_at.to_i > 30*60 %></td>
     <td><%= link_to 'Show', stream %></td>
     <td><%= link_to 'Edit', edit_stream_path(stream) %></td>
     <td><%= link_to 'Destroy', stream, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
+
+<p><i class="icon-exclamation-sign"></i> more than 30 minutes ago</p>http://162.209.57.59/
