--- a/app/views/streams/index.html.erb
+++ b/app/views/streams/index.html.erb
@@ -25,12 +25,10 @@
       <b>Oauth Token:</b> <%= stream.oauth_token %><br />
       <b>Oauth Token Secret:</b> <%= stream.oauth_token_secret %>
     </td>
-    <td><%= stream.tweets.last.updated_at unless stream.tweets.empty? %></td>
+    <td><%= stream.tweets.last.updated_at.strftime("%F %T %Z") unless stream.tweets.empty? %></td>
     <td><%= link_to 'Show', stream %></td>
     <td><%= link_to 'Edit', edit_stream_path(stream) %></td>
     <td><%= link_to 'Destroy', stream, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
-
-<p><i class="icon-exclamation-sign"></i> more than 30 minutes ago</p>http://162.209.57.59/
