--- a/app/views/streams/_form.html.erb
+++ b/app/views/streams/_form.html.erb
@@ -21,19 +21,19 @@
   </div>
   <div class="field">
     <%= f.label :consumer_key %><br />
-    <%= f.text_field :consumer_key %>
+    <%= f.text_field :consumer_key, :class => "input-xxlarge" %>
   </div>
   <div class="field">
     <%= f.label :consumer_secret %><br />
-    <%= f.text_field :consumer_secret %>
+    <%= f.text_field :consumer_secret, :class => "input-xxlarge" %>
   </div>
   <div class="field">
     <%= f.label :oauth_token %><br />
-    <%= f.text_field :oauth_token %>
+    <%= f.text_field :oauth_token, :class => "input-xxlarge" %>
   </div>
   <div class="field">
     <%= f.label :oauth_token_secret %><br />
-    <%= f.text_field :oauth_token_secret %>
+    <%= f.text_field :oauth_token_secret, :class => "input-xxlarge" %>
   </div>
   <div class="actions">
     <%= f.submit %>
