Added button for restarting the streaming (doesn't work yet)

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -46,7 +46,7 @@ $(document).ready(function(){
   <tr><th>Time</th><th>Message</th></tr>
   <% @streams.each do |stream| %>
   <% if stream.tweets.count > 0 && Time.now - stream.tweets.last.updated_at > 600 %>
-  <tr class="error"><td><%= Time.at(stream.tweets.last.updated_at.to_i + 600).strftime("%F %T %Z") %></td><td>No tweets for <%= link_to "#{stream.name} (ID: #{stream.id})", stream %> in the last 10 minutes.</td></tr>
+  <tr class="error"><td><%= Time.at(stream.tweets.last.updated_at.to_i + 600).localtime.strftime("%F %T %Z") %></td><td>No tweets for <%= link_to "#{stream.name} (ID: #{stream.id})", stream %> in the last 10 minutes.</td></tr>
   <% elsif stream.tweets.empty? %>
   <tr class="info"><td>-</td><td><%= link_to "#{stream.name} (ID: #{stream.id})", stream %> hasn't been started yet.</td></tr>
   <% end %>
