Added time zone to stocks, showing current quote from Yahoo! Finance

--- a/app/views/stocks/_form.html.erb
+++ b/app/views/stocks/_form.html.erb
@@ -19,6 +19,10 @@
     <%= f.label :symbol %><br />
     <%= f.text_field :symbol %>
   </div>
+  <div class="field">
+    <%= f.label :time_zone %>
+    <%= f.time_zone_select :time_zone %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
