--- a/app/views/stocks/index.html.erb
+++ b/app/views/stocks/index.html.erb
@@ -6,6 +6,7 @@
   <tr>
     <th>Name</th>
     <th>Symbol</th>
+    <th>Time zone</th>
     <th></th>
     <th></th>
     <th></th>
@@ -15,6 +16,7 @@
   <tr>
     <td><%= stock.name %></td>
     <td><%= stock.symbol %></td>
+    <td><%= stock.time_zone %></td>
     <td><%= link_to 'Show', stock %></td>
     <td><%= link_to 'Edit', edit_stock_path(stock) %></td>
     <td><%= link_to 'Destroy', stock, method: :delete, data: { confirm: 'Are you sure?' } %></td>
