Added helper for retrieving latest stock quotes

--- a/app/views/stocks/index.html.erb
+++ b/app/views/stocks/index.html.erb
@@ -7,6 +7,7 @@
     <th>Name</th>
     <th>Symbol</th>
     <th>Time zone</th>
+    <th>Latest quote</th>
     <th></th>
     <th></th>
     <th></th>
@@ -17,6 +18,8 @@
     <td><%= stock.name %></td>
     <td><%= stock.symbol %></td>
     <td><%= stock.time_zone %></td>
+    <% quote = get_latest_quote(stock.symbol) %>
+    <td><%= quote.lastTrade %> (<%= quote.date %> <%= quote.time %>)</td>
     <td><%= link_to 'Show', stock %></td>
     <td><%= link_to 'Edit', edit_stock_path(stock) %></td>
     <td><%= link_to 'Destroy', stock, method: :delete, data: { confirm: 'Are you sure?' } %></td>
